# quick-pptx

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  app.py  deck-test.js  design-tokens.json  package-lock.json  package.json  pyproject.toml  styles.css
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
_bmad/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
docs/: CNAME  _config.yml  index.md  spike-notes.md
documentations/: PIVOT-2026-05.md
documentations/implementation-artifacts/: sprint-status.yaml
documentations/planning-artifacts/: accessibility-audit-v0.1-archive.md  architecture.md  epics.md  implementation-readiness-report-2026-05-05.md  prd.md  product-brief-IA-pptx-generator-distillate.md  product-brief-IA-pptx-generator.md  ux-design-specification.md
scripts/: build_skill_bundle.py  freeform_helpers.js  gen_image.py  generate_third_party_licenses.py  install_fonts.py  rename_project.py  render_pptxgenjs.js  spike.py  spike_multibackend.py
skills/ia-pptx/: SKILL.md
skills/ia-pptx/scripts/: generate.py
src/ia_pptx/: __init__.py  __main__.py  auth.py
src/ia_pptx/core/: __init__.py  _claude_client.py  _llm.py  content_drafter.py  critique.py  design_choices.py  exceptions.py  filename.py  freeform.py  freeform_pdf.py  metadata.py  orchestrator.py  plan_critic.py  renderer.py  shapes.py  types.py
src/ia_pptx/core/renderers/: __init__.py  pptx_native.py  pptxgenjs_node.py  protocol.py  weasyprint_html.py
src/ia_pptx/core/renderers/weasyprint_templates/: deck.html
src/ia_pptx/design/: __init__.py  library.py  presets.py
src/ia_pptx/eval/: __init__.py  corpus.yml  falsification.py  snapshot.py
src/ia_pptx/prompts/: __init__.py  critique_rubric.txt  design_choice.txt  freeform_pdf_revise.txt  freeform_pdf_system.txt  freeform_revise.txt  freeform_system.txt  freeform_visual_qa.txt  icons.txt  naegle_rules.txt  outline.txt  outline_from_plan.txt  plan_critic.txt  slide_rules.txt
tests/: test_smoke.py
tests/integration/: test_metadata_truncation.py  test_orchestrator_e2e.py  test_renderer.py  test_renderer_backends.py
tests/unit/: test_auth.py  test_content_drafter.py  test_design_choices.py  test_design_library.py  test_design_tokens.py  test_eval.py  test_filename.py  test_forced_style.py  test_language_directive.py  test_plan_mode.py  test_slide_rules.py
