[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ia-pptx-generator"
version = "0.2.0"
description = "Editorial-grade decks via Claude + visual QA loop. Claude writes the deck source code directly (pptxgenjs JS or HTML/CSS); a vision pass spots rendering bugs and asks Claude to revise."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Florian" },
]
keywords = ["claude", "skill", "pptx", "powerpoint", "pdf", "weasyprint", "pptxgenjs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics :: Presentation",
]

dependencies = [
  "anthropic>=0.40.0",
  "python-dotenv>=1.0",
  "weasyprint>=63.0",
]

[project.scripts]
ia-pptx = "ia_pptx.__main__:main"

[project.optional-dependencies]
streamlit = [
  "streamlit>=1.40",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "ia-pptx-generator[streamlit]",
]

[project.urls]
"Homepage" = "https://github.com/Aionmizu/quick-pptx"
"Source" = "https://github.com/Aionmizu/quick-pptx"
"Issues" = "https://github.com/Aionmizu/quick-pptx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ia_pptx"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/scripts", "/skills", "/README.md", "/LICENSE", "/THIRD_PARTY_LICENSES.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
  ".claude",
  "_bmad",
  "documentations",
  "vendor",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # ruff-specific
]
ignore = [
  "E501",   # line-too-long (handled by formatter)
  "RUF001", # ambiguous-unicode in strings (deliberate em/en dashes in user-facing copy)
  "RUF002", # ambiguous-unicode in docstrings
  "RUF003", # ambiguous-unicode in comments
  "N818",   # exception name suffix
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N"]
"app.py" = ["E402"]
"skills/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["src/ia_pptx"]

[[tool.mypy.overrides]]
module = [
  "ia_pptx.core.exceptions",
  "ia_pptx.core._llm",
  "ia_pptx.core.freeform",
  "ia_pptx.core.freeform_pdf",
  "ia_pptx.core.critique",
  "ia_pptx.core.plan_critic",
  "ia_pptx.design.presets",
]
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "ia_pptx.prompts.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["anthropic.*", "streamlit", "streamlit.*", "weasyprint", "weasyprint.*", "dotenv"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: integration tests that may hit external APIs (deselect with -m 'not integration')",
]
